src/test/ui/consts/miri_unleashed/drop.stderr
error[E0080]: could not evaluate static initializer
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |
LL | / pub unsafe fn drop_in_place<T: ?Sized>(to_drop: *mut T) {
LL | |     // Code here does not matter - this is replaced by the
LL | |     // real drop glue by the compiler.
LL | |
LL | |     // SAFETY: see comment above
LL | |     unsafe { drop_in_place(to_drop) }
LL | | }
   | | ^
   | | |
   | |_calling non-const function `<Vec<i32> as Drop>::drop`
   |   inside `drop_in_place::<Vec<i32>> - shim(Some(Vec<i32>))` at $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   | 
  ::: $DIR/drop.rs:18:1
   |
LL |   };
   |   - inside `TEST_BAD` at $DIR/drop.rs:18:1

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/drop.rs:17:9
   |
LL |     let _v: Vec<i32> = Vec::new();
   |         ^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
